ê¶ãO액티비티 분í할 및 Play_OCR_Activity 권한, ãOCR 분석기능 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Blank</string>
+    <string name="subscription_key">2f972e2d1740429abb7db65e2d7b2070</string>
+    <string name="subscription_apiroot">https://azure-ocr-fill-in-blank.cognitiveservices.azure.com/</string>
+
 </resources>
